# ros2-theconstruct-ai

./: .gitignore  README.md  exercise42_pkg.tar
actions/action_quiz/: CMakeLists.txt  package.xml
actions/action_quiz/launch/: quiz_server.launch.py
actions/action_quiz/src/: quiz_server.cpp
actions/actions_quiz/: CMakeLists.txt  package.xml
actions/actions_quiz/launch/: actions_quiz_client.launch.py  quiz_server.launch.py  solution_action_quiz_client.launch.py  solution_action_quiz_server.launch.py
actions/actions_quiz/src/: quiz_server.cpp  solution_quiz_client.cpp  solution_quiz_server.cpp
actions/actions_quiz_msg/: CMakeLists.txt  package.xml
actions/my_action_client/: CMakeLists.txt  package.xml
actions/my_action_client/src/: README.md  action_client.cpp
actions/my_action_server/: CMakeLists.txt  package.xml
actions/my_action_server/src/: action_server.cpp
custom_interfaces/: CMakeLists.txt
custom_interfaces/srv/: MessageMessieurs.srv
executors_exercises_pkg/: CMakeLists.txt  package.xml
executors_exercises_pkg/src/: executor_example_1.cpp  executor_example_2.cpp  executor_example_3.cpp  executor_example_4.cpp  executor_example_4_singlethreaded.cpp  executor_example_5.cpp  executor_example_5_mutualyexclusive.cpp  executor_example_5_mutualyexclusive_multiple.cpp  executor_example_5_reentrant.cpp
exercise42_pkg/: CMakeLists.txt  package.xml
lab/wall_follow/: CMakeLists.txt  package.xml
lab/wall_follow/launch/: wall_follow.launch.py
lab/wall_follow/src/: wall_follow.cpp
movement_pkg/: CMakeLists.txt
movement_pkg/launch/: movement_server.launch.py
movement_pkg/src/: movement_server.cpp
neo_simulation2/: README.md
services/: reworked_solutions.tar
services/exercise42_pkg/src/: exercise42.cpp
services/movement_pkg/: package.xml
services/movement_pkg/launch/: movement_client.launch.py
services/movement_pkg/src/: movement_client.cpp
services/reworked_solutions/: CMakeLists.txt  package.xml
services/reworked_solutions/launch/: ex42.launch.py  mov_client.launch.py  mov_server.launch.py  service_client.launch.py  service_client_v2.launch.py  spin.launch.py  spin_client.launch.py
services/reworked_solutions/src/: ex42.cpp  mov_client.cpp  mov_server.cpp  service_client.cpp  service_client_v2.cpp  spin.cpp  spin_client.cpp
services/services_quiz/services_quiz/src/: services_quiz_client.cpp  solution_services_quiz_server.cpp
services/services_quiz/services_quiz_srv/: package.xml
services_quiz/: README.md
services_quiz/services_quiz/: CMakeLists.txt  package.xml
services_quiz/services_quiz/src/: services_quiz_server.cpp  solution_services_quiz_client.cpp
services_quiz/services_quiz_srv/: CMakeLists.txt
topics/: reworked_solutions.tar
topics/reworked_solutions/: CMakeLists.txt  package.xml
topics/reworked_solutions/launch/: move_robot.launch.py  publish_age.launch.py  simple_subscriber.launch.py  simple_topic_publisher.launch.py  simple_topic_publisher_composable.launch.py  sub_odom.launch.py  topic_quiz.launch.py
topics/reworked_solutions/src/: move_robot.cpp  publish_age.cpp  simple_subscriber.cpp  simple_topic_publisher.cpp  simple_topic_publisher_composable.cpp  sub_odom.cpp  topic_quiz.cpp
topics/topic_publisher_pkg/: CMakeLists.txt
topics/topic_publisher_pkg/launch/: publish_age.launch.py  simple_topic_publisher_composable.launch.py
topics/topic_publisher_pkg/src/: move_robot.cpp  publish_age.cpp  simple_topic_publisher.cpp  simple_topic_publisher_composable.cpp
topics/topic_subscriber_pkg/: CMakeLists.txt
topics/topic_subscriber_pkg/launch/: simple_topic_subscriber.launch.py
topics/topic_subscriber_pkg/src/: simple_topic_subscriber.cpp  sub_odom.cpp
topics/topics_quiz/: CMakeLists.txt
topics/topics_quiz/src/: solution_topics_quiz.cpp
topics_quiz/: solution_CMakeLists.txt
topics_quiz/launch/: solution_topics_quiz.launch.py
topics_quiz/src/: topics_quiz.cpp
video/: topics_quiz.mov
